# DeepDecoy-Adaptive-AI-Powered-Honeypot

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  ai_shell.py  analyzer.py  config.py  dashboard.py  deception_engine.py  learning_engine.py  main.py  personas.py  pyproject.toml  requirements.txt  session_logger.py  web_ai_responder.py  web_server.py
.github/workflows/: ci.yml
data/: deepdecoy.db
prompts/: http_api_prompt.txt  http_web_prompt.txt  motd.txt  summary_prompt.txt  system_prompt.txt
templates/: overview.html  personas.html  session_detail.html  sessions_list.html
tests/: conftest.py  test_deception_engine.py
