[project]
name = "deepdecoy"
version = "2.0.0"
description = "Adaptive multi-persona AI-powered honeypot (SSH + Web)"
authors = [ { name = "DeepDecoy Contributors" } ]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Educational / Research Use" }
keywords = ["honeypot","cybersecurity","openai","deception","security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology"
]

[project.dependencies]
paramiko = ">=3.4.0"
flask = ">=3.0.0"
openai = ">=1.12.0"
python-dotenv = ">=1.0.0"
cryptography = ">=42.0.0"

[project.optional-dependencies]
dev = ["pytest>=8.0.0","flake8>=7.0.0"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.flake8]
max-line-length = 120
exclude = ["venv","build","dist","logs"]

[build-system]
requires = ["setuptools>=65.0.0","wheel"]
build-backend = "setuptools.build_meta"
